--- a/react/package.json
+++ b/react/package.json
@@ -19,6 +19,7 @@
     "react-toastify": "^9.1.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "vite-plugin-svgr": "^4.1.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
