--- a/react/package.json
+++ b/react/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
+    "classnames": "^2.3.2",
     "formik": "^2.4.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -19,7 +21,6 @@
     "react-toastify": "^9.1.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
-    "vite-plugin-svgr": "^4.1.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "sass": "^1.69.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-svgr": "^4.1.0"
   }
 }
